DirectionServiceImpl findAll fix